# docs/swagger.json
@@ -1042,6 +1042,42 @@
                     }
                 }
             }
+        },
+        "/v2/tableData/teamlead/get": {
+            "post": {
+                "description": "returns all account requests by period and employee",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Table data"
+                ],
+                "summary": "Get account requests by period and employee",
+                "parameters": [
+                    {
+                        "description": "status",
+                        "name": "getTeamleadTables",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.TeamleadTableRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TableData"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1312,6 +1348,17 @@
                 }
             }
         },
+        "models.Period": {
+            "type": "object",
+            "properties": {
+                "endDate": {
+                    "type": "string"
+                },
+                "startDate": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ReturnAccountRequest": {
             "type": "object",
             "properties": {
@@ -1440,6 +1487,40 @@
                 },
                 "teamlead": {
                     "$ref": "#/definitions/models.Employee"
+                }
+            }
+        },
+        "models.TeamleadTableRequest": {
+            "type": "object",
+            "properties": {
+                "period": {
+                    "$ref": "#/definitions/models.Period"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "uid": {
+                    "$ref": "#/definitions/models.UID"
+                }
+            }
+        },
+        "models.UID": {
+            "type": "object",
+            "properties": {
+                "roleID": {
+                    "type": "integer"
+                },
+                "teamID": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
